<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <DUT Name="ST_FqInverter_HwInputs" Id="{fdd2b2c2-d357-085d-3f2c-25cf664d97a2}">
    <Declaration><![CDATA[TYPE ST_FqInverter_HwInputs :
STRUCT
	Feedback	: INT;	// Actual feedback value
	Error		: BOOL;	// Error indication
	Ready		: BOOL;	// Ready indication
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>